# rag-app-aks

./: .gitignore  Makefile  README.md  docker-compose.yaml
deploy/: README.md
envs/: .env.example
postgres/: init.sql
services/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/backend/app/: main.py
services/backend/app/api/v1/: chat.py  dependencies.py  documents.py  health.py  router.py  sessions.py
services/backend/app/core/: cache.py  config.py  logging.py
services/backend/app/core/langgraph/: filesystem_middleware.py  graph.py
services/backend/app/core/langgraph/skills/canned_responses/: SKILL.md
services/backend/app/core/langgraph/skills/statute_analysis/: SKILL.md
services/backend/app/core/langgraph/skills/statute_analysis/references/: canons_of_construction.md  index.md  practical_lessons.md  statutory_structure.md
services/backend/app/core/langgraph/tools/: __init__.py  duckduckgosearch.py  patient_db_query.py  regulation_db_query.py
services/backend/app/models/: base.py  database.py  document_extraction.py  ingestion_job.py  session.py  thread.py
services/backend/app/schemas/: __init__.py  auth.py  chat.py  documents.py  graph.py  sessions.py
services/backend/app/services/: database.py  llm.py  memory.py  rabbitmq.py  storage.py
services/backend/app/utils/: __init__.py  graph.py
services/backend/migrations/: env.py  script.py.mako
services/backend/migrations/versions/: 8f4f6a3bb57d_add_ingestion_jobs.py  af1d6d7f3c2b_set_document_extractions_created_at_default.py  c6af759ba9e2_initial_commit.py
services/backend/scripts/: docker-backend-entrypoint.sh
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  (+2 more)
(+103 files in other folders)
