[project]
name = "rag-app-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.0",
    "boto3>=1.36.0",
    "ddgs>=9.11.2",
    "deepagents>=0.4.7",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "openai>=2.26.0",
    "psycopg-pool>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.41.0",
]
